--- a/Coffee/templates/coffee/collection.html
+++ b/Coffee/templates/coffee/collection.html
@@ -1,6 +1,30 @@
 {% extends 'coffee/header.html' %}
 {% block content %}
+  <script>
+    function deleteClick(id) {
+      var confirmed = confirm('Are you sure you want to delete this coffee?');
+      if (confirmed) {
+        var token = Cookies.get('csrftoken');
+        $.ajax(
+          {
+            headers: { 'X-CSRFToken': token },
+            url: 'http://localhost:8000/delete/' + id,
+            type: 'DELETE',
+            success: function(res) {
+              console.log(res);
+              return window.location.reload();
+            },
+            error: function(err) {
+              console.log(err);
+            }
+          }
+        );
+      } else { console.log('noooo') }
+    }
+  </script>
+
   <div class="row">
+    {% csrf_token %}
     {% for coffee in all_coffee %}
       <div class="col s12 m6 l4">
         <div class="card blue-grey darken-1">
@@ -13,7 +37,7 @@
           </div>
           <div class="card-action">
             <a href="edit/{{coffee.id}}" id="{{coffee.id}}">Edit</a>
-            <a href="delete/{{coffee.id}}" id="{{coffee.id}}">Delete</a>
+            <button onclick="deleteClick('{{ coffee.id }}')">del</button>
           </div>
         </div>
       </div>
