--- a/Coffee/templates/includes/navigation.html
+++ b/Coffee/templates/includes/navigation.html
@@ -1,9 +1,5 @@
-<nav>
+<nav class="teal darken-3">
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo">Coffee</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="/">Home</a></li>
-      <li><a href='/create'>Add Coffee</a></li>
-    </ul>
+    <a href="/" class="brand-logo" style="margin-left: 50px;">Coffee</a>
   </div>
 </nav>
